styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html,
body,
body > div:first-child,
div#__next,
div#__next > div {
  min-height: 100%;
  height: 100%;
  overflow: hidden;
}

/* For Webkit-based browsers (Chrome, Safari and Opera) */
.scrollbar-hide::-webkit-scrollbar {
  display: none;
}

/* For IE, Edge and Firefox */
.scrollbar-hide {
  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none; /* Firefox */
}

[contenteditable][data-placeholder]:empty:before {
  content: attr(data-placeholder);
  color: #8e8e8e;
  cursor: text;
}

/* Basic marquee animation */
@keyframes marquee {
  0% {
    transform: translateX(100%);
  }
  100% {
    transform: translateX(-100%);
  }
}

.animate-marquee {
  animation: marquee 15s linear infinite;
}

